--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "my-app",
+  "name": "cr-wala",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "cra-template": "1.2.0",
+    "framer-motion": "^11.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
